--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,4 +22,6 @@ nav:
     - Interação entre Equipe e Cliente : VisãoProduto/Interação.md
   - Lições Aprendidas: 
     - Unidade 1 : Unidades/Unidade1.md
+  - Apresentações: 
+    - Apresentação Unidade 1 : Entregas/Entrega1.md
   
