--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,6 +20,7 @@ nav:
     - Estratégias de Engenharia de Software : VisãoProduto/Estrategias.md
     - Cronogramas e Entregas : VisãoProduto/Cronograma.md
     - Interação entre Equipe e Cliente : VisãoProduto/Interação.md
+    - Arquitetura : VisãoProduto/Arquitetura.md
   - Lições Aprendidas: 
     - Unidade 1 : Unidades/Unidade1.md
   - Apresentações: 
