docs: adicionando as atividades e tecnicas de ER

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,6 +18,7 @@ nav:
   - Visão do Produto e Projeto: 
     - Solução Proposta : VisãoProduto/Solucao.md
     - Estratégias de Engenharia de Software : VisãoProduto/Estrategias.md
+    - Engenharia de Requisitos: VisãoProduto/EngRequisitos.md
     - Cronogramas e Entregas : VisãoProduto/Cronograma.md
     - Interação entre Equipe e Cliente : VisãoProduto/Interação.md
     - Arquitetura : VisãoProduto/Arquitetura.md
