docs: criando aba de dor e dod

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,6 +22,7 @@ nav:
     - Cronogramas e Entregas : VisãoProduto/Cronograma.md
     - Interação entre Equipe e Cliente : VisãoProduto/Interação.md
     - Requisitos de Software: VisãoProduto/Requisitos.md
+    - DoR e DoD: VisãoProduto/DoRDoD.md
     - Arquitetura : VisãoProduto/Arquitetura.md
   - Lições Aprendidas: 
     - Unidade 1 : Unidades/Unidade1.md
