docs: adicionando aba do backlog

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,6 +23,7 @@ nav:
     - Interação entre Equipe e Cliente : VisãoProduto/Interação.md
     - Requisitos de Software: VisãoProduto/Requisitos.md
     - DoR e DoD: VisãoProduto/DoRDoD.md
+    - Backlog do Produto: VisãoProduto/Backlog.md
     - Arquitetura : VisãoProduto/Arquitetura.md
   - Lições Aprendidas: 
     - Unidade 1 : Unidades/Unidade1.md
