docs: adicionando abas das fases do openUP

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -27,6 +27,12 @@ nav:
     - Arquitetura : VisãoProduto/Arquitetura.md
   - Lições Aprendidas: 
     - Unidade 1 : Unidades/Unidade1.md
+  - Fases do OpenUP:
+    - Concepção: FasesOpenUP/Concepcao.md
+    - Elaboração: FasesOpenUP/Elaboracao.md
+    - Construção: FasesOpenUP/Construcao.md
+    - Transição: FasesOpenUP/Transicao.md
   - Apresentações: 
     - Apresentação Unidade 1 : Entregas/Entrega1.md
+  
   
