docs: criando aba da unidade 2

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -26,6 +26,7 @@ nav:
     - Backlog do Produto: VisãoProduto/Backlog.md
   - Lições Aprendidas: 
     - Unidade 1 : Unidades/Unidade1.md
+    - Unidade 2 : Unidades/Unidade2.md
   - Fases do OpenUP:
     - Concepção: FasesOpenUP/Concepcao.md
     - Elaboração: FasesOpenUP/Elaboracao.md
