docs: adicionando aba da entrega da unidade 2

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -34,5 +34,6 @@ nav:
     - Transição: FasesOpenUP/Transicao.md
   - Apresentações: 
     - Apresentação Unidade 1 : Entregas/Entrega1.md
+    - Apresentação Unidade 2 : Entregas/Entrega2.md
   
   
