--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,6 +23,7 @@ nav:
     - Arquitetura : VisãoProduto/Arquitetura.md
   - Lições Aprendidas: 
     - Unidade 1 : Unidades/Unidade1.md
+    - Unidade 2 : Unidades/Unidade2.md
   - Apresentações: 
     - Apresentação Unidade 1 : Entregas/Entrega1.md
   
