--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=backend
+
+# URL de conexão com o banco de dados PostgreSQL dentro do container
+spring.datasource.url=jdbc:postgresql://postgres:5432/petshopguara
+
+# Credenciais do banco de dados
+spring.datasource.username=myuser
+spring.datasource.password=mypassword
+
+# Configuração do Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
