--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -31,6 +31,7 @@ nav:
   - Estudos de Caso:
     - Product Backlog Building: EstudosDeCaso/PBB.md
     - User Story Mapping: EstudosDeCaso/USM.md
+    - Casos de uso:  EstudosDeCaso/CasoDeUso.md
   - Fases do OpenUP:
     - Concepção: FasesOpenUP/Concepcao.md
     - Elaboração: FasesOpenUP/Elaboracao.md
