Ajustes casos de uso e lições aprendidas

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,6 +28,7 @@ nav:
     - Unidade 1 : Unidades/Unidade1.md
     - Unidade 2 : Unidades/Unidade2.md
     - Unidade 3 : Unidades/Unidade3.md
+    - Unidade 4 : Unidades/Unidade4.md
   - Estudos de Caso:
     - Product Backlog Building: EstudosDeCaso/PBB.md
     - User Story Mapping: EstudosDeCaso/USM.md
@@ -41,5 +42,6 @@ nav:
     - Apresentação Unidade 1 : Entregas/Entrega1.md
     - Apresentação Unidade 2 : Entregas/Entrega2.md
     - Apresentação Unidade 3 : Entregas/Entrega3.md
+    - Apresentação Unidade 4 : Entregas/Entrega4.md
   
   
