--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -43,5 +43,6 @@ nav:
     - Apresentação Unidade 2 : Entregas/Entrega2.md
     - Apresentação Unidade 3 : Entregas/Entrega3.md
     - Apresentação Unidade 4 : Entregas/Entrega4.md
+    - Apresentação Cliente : Entregas/EntregaCliente.md
   
   
